--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -23,8 +23,11 @@
     line-height: normal;
 }
 .nome-perfil{
-    margin-top:15px;
+    margin-top:17px;
     margin-right: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .nome-perfil span{
     color: #235789;
@@ -33,10 +36,9 @@
     
 }
 .nome-perfil img{
-    margin-right: 10px;
-    margin-top: 5px;
     width: 25px;
     height: 25px;
+    margin-right: 5px;
 }
 .line{
     margin: 0 auto;
