--- a/src/Pages/Login/login.css
+++ b/src/Pages/Login/login.css
@@ -61,6 +61,8 @@
     border: 1px solid #C1BBBB;
     background: #FFF;
     transition: all ;
+    width: 100%;
+    max-width: 450px
 }
 .inputarea:hover{
     border-left: 4px solid #235789;
@@ -82,6 +84,10 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+}
+input:focus{
+    box-shadow: 0 0 0 0;
+    outline: 0;
 }
 .menu-login form button{
     margin-top: 90px;
