--- a/src/Pages/Exercicios/exercicios.css
+++ b/src/Pages/Exercicios/exercicios.css
@@ -18,8 +18,9 @@
     font-family: Poppins;
     color: #FDFFFC;
     font-weight: 400;
-    font-size: 40px;
+    font-size: 30px;
     font-style: normal;
+    margin: 20px;
 }
 .alternativas{
     background-color: #BDBDBD;
@@ -38,16 +39,20 @@
     max-width: 600px;
     height: 90px;
     background-color: #EEE;
+    
 }
-.alt:hover{
-    background-color: #235789;
-    color: #fff;
-}
-.alt span{
+.alt button{
+    width: 100%;
+    height: 100%;
+    border: 0;
     font-family: Poppins;
     font-weight: 450;
     font-size: 18px;
-    
+    background-color: #EEE;
+}
+.alt button:hover{
+    background-color: #235789;
+    color: #fff;
 }
 footer{
     bottom: 0;
