--- a/src/Pages/Register/register.css
+++ b/src/Pages/Register/register.css
@@ -1,8 +1,16 @@
 .link-login{
-    margin-top: 30px;
+    margin-top: 20px;
     text-decoration: none;
     font-family: Roboto;
     font-weight: 400;
     color: rgba(0, 0, 0, 0.61);
     
+}
+select{
+    border: 0;
+    margin-top: 5px;
+    font-size: 18px;
+    font-family: Roboto;
+    font-weight: 500;
+    color: #235789;
 }
