--- a/src/Pages/Login/login.css
+++ b/src/Pages/Login/login.css
@@ -6,9 +6,10 @@
 .menu-login{
     display: flex;
     flex-direction: column;
-    margin-top: 80px;
+    height: 100vh;
     width: 55%;
     margin-left: 150px;
+    justify-content: center;
 
 }
 .h1-login{
@@ -43,13 +44,13 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-top: 80px;
+    margin-top: 50px;
     text-align: center;
     width: 460px;
     
 }
 .menu-login form{
-    margin-top: 80px;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -91,7 +92,7 @@ input:focus{
     outline: 0;
 }
 .menu-login form button{
-    margin-top: 70px;
+    margin-top: 50px;
     border: 0;
     padding: 15px;
     width: 100px;
