--- a/src/Pages/Configuracoes/config.css
+++ b/src/Pages/Configuracoes/config.css
@@ -22,3 +22,23 @@
     color: #333;
     font-size: 50px;
 }
+
+@media (max-width: 500px){
+    .container-settings{
+        justify-content: center;
+        margin-top: 0;
+    }
+    .container-settings h1{
+        font-size: 40px;
+        text-align: center;
+    }
+    .container-settings form{
+        width: 80%;
+        gap: 2em;
+    }
+    .inputarea{
+        width: 93%;
+        
+    }
+    
+}
